# sprout-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.github/: FUNDING.yml
sprout/: __init__.py  __main__.py  daemon.py  db.py  models.py  router.py  scheduler.py  server.py
tests/: test_sprout.py
