[project]
name = "sprout"
version = "0.1.0"
description = "Model-tiered research MCP server — cheap models seed, expensive models verify"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
