[project]
name = "sprout-mcp"
version = "0.1.1"
description = "Model-tiered content pipeline MCP server — cheap models seed, expensive models verify"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Eric Browy" }]
keywords = ["mcp", "llm", "model-routing", "cost-optimization", "ai-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/mepsopti/sprout-mcp"
Repository = "https://github.com/mepsopti/sprout-mcp"
Issues = "https://github.com/mepsopti/sprout-mcp/issues"

[project.scripts]
sprout-mcp = "sprout.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sprout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
